--- a/sait/index.html
+++ b/sait/index.html
@@ -7,9 +7,15 @@
     <title>ЛОЛ!</title>
 </head>
 <body>
+
     <div class="MainBlock">
-    <input class="InputText" type="text" id="textInput" placeholder="Введите текст">
-    <button class="CreateButton" onclick="createNewWindow()">Создать окно</button>
+        <h1>Создай своё окно с текстом</h1>
+    <div class="Mehanika">
+        <div>
+            <input class="InputText" type="text" id="textInput" placeholder="Введите текст">
+        </div>
+            <button class="CreateButton" onclick="createNewWindow()">Создать окно</button>
+    </div>
     </div>
     <script src="cod.js"></script>
 </body>
