выбор фона + шрифта

--- a/sait/index.html
+++ b/sait/index.html
@@ -15,6 +15,14 @@
             <input class="InputText" type="text" id="textInput" placeholder="Введите текст">
         </div>
             <button class="CreateButton" onclick="createNewWindow()">Создать окно</button>
+            <div class="sas">
+            <label for="bgColor"><h3>Выберите цвет фона:</h3></label>
+            <input type="color" id="bgColor">
+            </div>
+            <div class="sas">
+            <label for="textColor"><h3>Выберите цвет текста:</h3></label>
+            <input type="color" id="textColor">
+            </div>
     </div>
     </div>
     <script src="cod.js"></script>
